# daily_news

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: news_digest.yml
data/: .gitkeep  news_archive.db
src/daily_news/: __init__.py  cli.py  config.py  models.py
src/daily_news/collectors/: __init__.py  base.py  rss.py
src/daily_news/delivery/: __init__.py  email.py  sms.py
src/daily_news/processing/: __init__.py  deduplicator.py  ranker.py  translator.py
src/daily_news/sources/: __init__.py  feeds.yaml  registry.py
src/daily_news/storage/: __init__.py  database.py
tests/: __init__.py  conftest.py  test_models.py  test_processing.py  test_storage.py
